.collect(Collectors.toList()) -> .toList, WIP