@@ -97,13 +97,13 @@ public class BlockSupplierFactoryAdapter extends BlockExecutionParticipantAdapte
 		
 		Supplier<InputStream> catchSupplier = null; 		
 		if (!target.getCatch().isEmpty()) {
-			List<SupplierFactory<InputStream>> catchBlock = target.getCatch().stream().map(e -> Objects.requireNonNull(EObjectAdaptable.adaptToSupplierFactory(e, InputStream.class), "Cannot adapt to SupplierFactory: " + e)).collect(Collectors.toList());
+			List<SupplierFactory<InputStream>> catchBlock = target.getCatch().stream().map(e -> Objects.requireNonNull(EObjectAdaptable.adaptToSupplierFactory(e, InputStream.class), "Cannot adapt to SupplierFactory: " + e)).toList();
 			catchSupplier = Util.asInputStreamSupplierFactory(catchBlock).contextify(ctx -> createCatchContextSupplier(ctx, eRef)).create(context);
 		}
 		
 		Supplier<InputStream>  finallySupplier = null;
 		if (!target.getFinally().isEmpty()) {
-			List<SupplierFactory<InputStream>> finallyBlock = target.getFinally().stream().map(e -> Objects.requireNonNull(EObjectAdaptable.adaptToSupplierFactory(e, InputStream.class), "Cannot adapt to SupplierFactory: " + e)).collect(Collectors.toList());
+			List<SupplierFactory<InputStream>> finallyBlock = target.getFinally().stream().map(e -> Objects.requireNonNull(EObjectAdaptable.adaptToSupplierFactory(e, InputStream.class), "Cannot adapt to SupplierFactory: " + e)).toList();
 			finallySupplier = Util.asInputStreamSupplierFactory(finallyBlock).contextify(ctx -> createCatchContextSupplier(ctx, eRef)).create(context);
 		}		
 		
